# crapssim

./: Cargo.toml  LICENSE  README.md  viz.jl
src/: main.rs
