[package]
name = "crapssim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
rand = "0.8.5"
