[package]
name = "crapssim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
noisy_float = "0.2.0"
poloto = "19.1.2"
prettytable = "0.10.0"
rand = "0.8.5"
simple_logger = "5.0.0"
